Bug #18932 Cluster binlog mysqld accepts updating although binlog not setup
Submitted: 10 Apr 2006 9:38 Modified: 23 Apr 2006 3:45
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.1.7 + custom OS:
Assigned to: Tomas Ulin Target Version:

[10 Apr 2006 9:38] Tomas Ulin
Description:
Cluster binlog mysqld accepts updating although binlog not setup

resulting in missing updates in the binlog

How to repeat:
one needs many tables, or insert a sleep manually in the code, in the init code of the
ndb binlog, and do an insert while sleep/setup is going on
[10 Apr 2006 9:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4695
[10 Apr 2006 14:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4709
[21 Apr 2006 16:48] Tomas Ulin
pushed to 5.1.10
[23 Apr 2006 3:45] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.1.10 chngelog; closed.